# HYP_2025

./: README.m  README.md  package-lock.json
rust-backend/: .env  Cargo.toml  db.rs  scan_log.json  scans.db
rust-backend/src/: db.rs  lib.rs  main.rs
rust-backend/src/handlers/: assessment_handler.rs  external_scan_handler.rs  mod.rs
rust-backend/src/models/: mod.rs  scan_request.rs  scan_result.rs
rust-backend/src/routes/: assessment_routes.rs  mod.rs
rust-backend/src/services/: certificate_parser.rs  certificate_validator.rs  errors.rs  http_security_checker.rs  mod.rs  mozilla_observatory.rs  openssl_probe.rs  phishing_detector.rs  scanner.rs  security_grader.rs  ssllabs.rs  tls_handshake.rs  tls_parser.rs
rust-backend/src/services/tls_handshake/: client_handshake.rs  client_handshake_tls13.rs  keys.rs  messages.rs  mod.rs  tls_handshake.rs  validation.rs
rust-backend/src/services/tls_handshake/tls13/: client.rs  handshake_processor.rs  key_schedule.rs  messages.rs  mod.rs  record_layer.rs  transcript.rs  validation.rs
rust-backend/src/utils/: mod.rs
svelte-frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
svelte-frontend/public/: manifest.json
svelte-frontend/src/: App.svelte  app.css  main.ts
svelte-frontend/src/lib/: getDomain.ts
svelte-frontend/src/popup/: DetailedReport.svelte  Main.svelte  SettingsPage.svelte  detailedReport.css  settings.css
svelte-frontend/src/popup/components/: GradeCard.svelte
svelte-frontend/src/stores/: navigationStore.ts
svelte-frontend/src/tab/: DetailedReportTab.svelte  TabView.svelte
