[package]
name = "rust-backend"
version = "0.1.0"     # Or your desired version
edition = "2024"      # Or your current Rust edition (e.g., "2021" or "2018")

[dependencies]
# Async runtime
tokio = { version = "1.38", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

# Environment loading
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

uuid = { version = "1", features = ["v4", "serde"] }
tower-http = { version = "0.5", features = ["cors"] } #prevent CORS ERROR

#tls dependencies
rand = "0.8"
p256 = { version = "0.13", features = ["ecdh"] }

#certificate parsing
x509-parser = "0.15"

#certificate validation
webpki = "0.22.4"
webpki-roots = "0.22.3"
rustls = "0.21.7"
ring = "0.17"
time = "0.3"

hex = "0.4"
byteorder = "1.5.0"
sha2 = "0.10.9"
