[package]
name = "rust-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1.38", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

# Environment loading
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
log = "0.4.27"                                                             # Keep log for the info! macro

uuid = { version = "1", features = ["v4", "serde"] }
tower-http = { version = "0.5", features = ["cors"] } #prevent CORS ERROR

#tls dependencies
rand = "0.8"
p256 = { version = "0.13", features = [
    "ecdh",
    "ecdsa",
] } # ADDED "ecdsa" feature
rsa = { version = "0.9", features = [
    "sha2",
] } # ADDED "pkcs1", "pkcs8", "sha2" features

#certificate parsing
x509-parser = "0.15"

#certificate validation
webpki = "0.22.4"
webpki-roots = "0.25"
rustls = "0.21.7"
ring = "0.17"
time = "0.3"

hex = "0.4"
byteorder = "1.5.0"
sha2 = "0.10"
hmac = "0.12"
elliptic-curve = "0.13.8"

aes-gcm = "0.10"
aes = "0.8"
typenum = "1.17"
der = "0.7.10"

once_cell = "1.18"
const-oid = "0.9"
hyper = "0.14"
x25519-dalek = "2.0.1"
rand_core = "0.9.3"
chacha20poly1305 = "0.10.1"
generic-array = "0.14.7"
